--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -10,3 +10,27 @@
     width: 39%;
     margin: 1%;
 }
+
+.container-home {
+    margin: 70px auto 0 auto;
+}
+
+.dataMarkup {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container-progress {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 600px) {
+    .dataMarkup {
+        display: flex;
+        flex-direction: column;
+        /*flex-wrap: wrap;*/
+    }
+}
