--- a/src/components/Navber/Navber.css
+++ b/src/components/Navber/Navber.css
@@ -16,6 +16,15 @@
     width: 20%;
     height: 100%;
     border-radius: 100em;
+    padding: 5px;
+    margin: 10px;
+}
+
+.container-time h6 {
+    color: #707070;
+    font-size: 2vmin;
+    letter-spacing: 2px;
+    font-weight: bold;
 }
 
 .container-text-field-post {
